--- a/Directive-Features/src/app/course-card/course-card.component.html
+++ b/Directive-Features/src/app/course-card/course-card.component.html
@@ -41,7 +41,7 @@
         {{course.longDescription}}
     </div> -->
 
- <input disabled required>
+ <!-- <input disabled required> -->
 
 
     <button (click)="onCourseViewed()">View Course</button>
