--- a/Directive-Features/src/app/app.component.html
+++ b/Directive-Features/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <div class="courses" *ngIf="courseData[0] as course">
 
-  <app-course-card [courseDetail]="course" (courseSelected)="onClickCourseCard($event)">
+  <app-course-card [courseDetail]="course" appHighlighted class="highlighted " (courseSelected)="onClickCourseCard($event)">
 
       <app-course-image [src]="course.iconUrl" 
       ></app-course-image>
@@ -16,4 +16,5 @@
       {{course.longDescription}}
     </div>
   </app-course-card>
+  
 </div> 
