--- a/Directive-Features/src/styles.css
+++ b/Directive-Features/src/styles.css
@@ -100,5 +100,5 @@ button {
 }
 
 .highlighted {
-  box-shadow: 0 2px 16px 0 #de1e19, 0 3px 8px 0 rgba(226, 21, 19, 0.47), 0 6px 8px -1px #b41c18;
+  box-shadow: 0 2px 16px 0 #01c7f4, 0 3px 8px 0 rgba(2, 186, 247, 0.962), 0 6px 8px -1px #03b3f8;
 }
