--- a/Directive-Features/src/styles.css
+++ b/Directive-Features/src/styles.css
@@ -100,5 +100,5 @@ button {
 }
 
 .highlighted {
-  box-shadow: 0 2px 16px 0 #01c7f4, 0 3px 8px 0 rgba(2, 186, 247, 0.962), 0 6px 8px -1px #03b3f8;
+  box-shadow: 0 2px 16px 0 #11f401, 0 3px 8px 0 rgba(2, 247, 10, 0.962), 0 6px 8px -1px #12fa01;
 }
