--- a/Directive-Features/src/app/course-card/course-card.component.html
+++ b/Directive-Features/src/app/course-card/course-card.component.html
@@ -27,11 +27,10 @@
         <img src="/assets/images/empty-image.png">
     </ng-template> -->
 
-        <!-- <ng-content select="app-course-image"
-                         *ngIf="courseDetail.iconUrl; else blankImage"></ng-content> -->
+        <!-- <ng-content select="app-course-image" *ngIf="courseDetail.iconUrl; else blankImage"></ng-content> -->
 
     <ng-content select="app-course-image" *ngIf="courseDetail.iconUrl; else noImage"></ng-content>
-    <ng-content select=".course-description"></ng-content>
+    <ng-content select=".course-description" ></ng-content>
 
     <ng-template #noImage>
         <ng-container *ngTemplateOutlet="noImageTpl; context: {description: courseDetail.description}"></ng-container>
